improve tenant model
