# middlewares/index.js
@@ -1,4 +1,8 @@
 const logger = (req, res, next) => {
+  console.log('Request Origin: ', req.headers.origin);
+  console.log('Request referer: ', req.headers.referer);
+  console.log('Request host: ', req.headers.host);
+
   !req.user ? console.log(`Hello ${!req.user ? 'Annonymous' : req.user.email}!`) :
     console.log(`${req.method} ${req.url}, user.sub: ${req.user.sub}, user.email: ${req.user.email}`);
   next(); // Call the next middleware function
